# VeloxML

./: .buildinfo  .cibuildwheel.toml  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements_docs.txt  search.html  searchindex.js  setup.py  test.py
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: modules.doctree  veloxml.base.doctree  veloxml.core.doctree  veloxml.doctree  veloxml.kmeans.doctree  veloxml.linear.doctree  veloxml.pca.doctree  veloxml.svm.doctree  veloxml.tree.doctree
.github/workflow/: docs.yml
.github/workflows/: docs.yml  release.yml
_modules/: index.html
_sources/source/: veloxml.core.rst.txt  veloxml.linear.rst.txt
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/source/: modules.doctree  veloxml.base.doctree  veloxml.core.doctree  veloxml.doctree  veloxml.kmeans.doctree  veloxml.linear.doctree  veloxml.pca.doctree  veloxml.svm.doctree  veloxml.tree.doctree
docs/_modules/: index.html
docs/_modules/veloxml/kmeans/: kmeans.html
docs/_modules/veloxml/linear/: linear_regression.html  ridge_regression.html
docs/_modules/veloxml/tree/: decision_tree_classification.html  random_forest_classification.html
docs/_sources/source/: veloxml.kmeans.rst.txt
docs/source/: veloxml.core.html  veloxml.pca.html  veloxml.pca.rst  veloxml.svm.html  veloxml.svm.rst  veloxml.tree.rst
docs/veloxml/: modules.rst  veloxml.base.rst  veloxml.core.rst
docs/veloxml/.doctrees/: environment.pickle
docs/veloxml/.doctrees/source/: veloxml.base.doctree  veloxml.core.doctree  veloxml.kmeans.doctree  veloxml.linear.doctree  veloxml.pca.doctree  veloxml.svm.doctree  veloxml.tree.doctree
docs/veloxml/source/: modules.html  veloxml.linear.html  veloxml.tree.html
docs_build/: conf.py
docs_build/veloxml/: objects.inv  py-modindex.html
docs_build/veloxml/.doctrees/: index.doctree
docs_build/veloxml/.doctrees/source/: modules.doctree  veloxml.doctree
docs_build/veloxml/_sources/source/: veloxml.rst.txt
docs_build/veloxml/source/: veloxml.base.html  veloxml.html  veloxml.kmeans.html
include/base/: base_binding.hpp  classification_base.hpp  estimator_base.hpp  regression_base.hpp  unsupervised_base.hpp
include/kdtree/: kdtree.hpp
include/kmeans/: kmeans.hpp
include/kmeans/bindings/: kmeans.hpp
include/linear/: elasticnet_regression.hpp  lasso_regression.hpp  linear_regression.hpp  logistic_regression.hpp  ridge_regression.hpp
include/linear/bindings/: elasticnet_regression.hpp  lasso_regression.hpp  linear_regression.hpp  logistic_regression.hpp  ridge_regression.hpp
include/metal/linear/: cxx_lasso_regression_metal.h  cxx_lasso_sgd_regression_metal.h  cxx_linear_regression_metal.h  cxx_ridge_regression_metal.h  objcxx_lasso_regression_metal.h  objcxx_lasso_sgd_regression_metal.h  objcxx_linear_regression_metal.h  objcxx_ridge_regression_metal.h
include/metal/linear/bindings/: lasso_regression_metal.hpp  lasso_sgd_regression_metal.hpp  linear_regression_metal.hpp  ridge_regression_metal.hpp
include/pca/: pca.hpp
include/pca/bindings/: pca.hpp
include/solver/: lbfgs.hpp  newton_cg.hpp
include/svm/: svm_classification.hpp  svm_regression.hpp
include/svm/bindings/: svm_classification.hpp  svm_regression.hpp
include/tree/: decision_tree_classification.hpp  random_forest_classification.hpp
include/tree/bindings/: decision_tree_classification.hpp  random_forest_classification.hpp
include/utils/: function.hpp  utilities.hpp
metal_kernel/linear/: lasso_regression.metal  lasso_sgd_regression.metal  linear_regression.metal  ridge_regression.metal
source/: modules.html  veloxml.base.html  veloxml.core.html  veloxml.html  veloxml.kmeans.html  veloxml.linear.html  veloxml.pca.html  veloxml.svm.html  veloxml.tree.html
src/: bindings.cpp  main.cpp
src/base/: base_binding.cpp  classification_base.cpp  estimator_base.cpp  regression_base.cpp  unsupervised_base.cpp
src/kdtree/: kdtree.cpp
src/kmeans/: kmeans.cpp
src/linear/: elasticnet_regression.cpp  lasso_regression.cpp  linear_regression.cpp  logistic_regression.cpp  ridge_regression.cpp
src/metal/linear/: cxx_lasso_regression_metal.mm  cxx_lasso_sgd_regression_metal.mm  cxx_linear_regression_metal.mm  cxx_ridge_regression_metal.mm  objcxx_lasso_regression_metal.mm  objcxx_lasso_sgd_regression_meta.mm  objcxx_linear_regression_metal.mm  objcxx_ridge_regression_metal.mm
src/pca/: pca.cpp
src/solver/: lbfgs.cpp  newton_cg.cpp
src/svm/: svm_classification.cpp  svm_regressioon.cpp
src/tree/: decision_tree_classification.cpp  random_forest_classification.cpp
src/utils/: function.cpp  utilities.cpp
tests/: conftest.py  test_main.cpp
tests/kmeans/: test_kmeans.cpp
tests/linear/: test_elasticnet_regression.cpp  test_lasso_regression.cpp  test_linear_regression.cpp  test_logistic_regression.cpp  test_ridge_regression.cpp
tests/pca/: test_pca.cpp
tests/svm/: test_svm_classification.cpp  test_svm_regression.cpp
tests/testutils/: function.cpp  function.hpp  test_data_utils.cpp  test_data_utils.hpp
tests/tree/: test_decision_tree_classification.cpp  test_random_forest_classification.cpp
tests/veloxml/linear/: test_elasticnet_regression.py  test_lasso_regression.py  test_linear_regression.py  test_logistic_regression.py  test_ridge_regression.py
tests/veloxml/tree/: test_decision_tree_classification.py  test_random_forest_classification.py
veloxml/: __init__.py
veloxml/base/: __init__.py  classification_base.py  estimator_base.py  regression_base.py  unsupervised_base.py
veloxml/core/: __init__.py
veloxml/kmeans/: kmeans.py
veloxml/linear/: __init__.py  elasticnet_regression.py  lasso_regression.py  linear_regression.py  logistic_regression.py  ridge_regression.py
veloxml/pca/: pca.py
veloxml/svm/: __init__.py  svm_classification.py
veloxml/tree/: __init__.py  decision_tree_classification.py  random_forest_classification.py
(+9 files in other folders)
